<resources>
    <string name="app_name">MyProjHuaquisto</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valDocumentFragment">Documents</string>
    <string name="valProfileFragment">Profile</string>
    <string name="valDni">DNI</string>
    <string name="valPassword">Password</string>
    <string name="valLogin">Login</string>
    <string name="valRegister">Register</string>
    <string name="valRememberUser">Remember User?</string>
    <string name="valHelp">Help?</string>
    <string name="valPiri">Piri</string>
    <string name="valPhone">Phone</string>
    <string name="valEmail">Email</string>
    <string name="valDob">DOB</string>
</resources>