<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlMainLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="36dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlMainRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp" />

    <ImageView
        android:id="@+id/mgvMain"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="32dp"
        android:tint="#E1BEE7"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight"
        app:layout_constraintStart_toStartOf="@+id/gdlMainLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_local_hospital_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMainDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight"
        app:layout_constraintStart_toStartOf="@+id/gdlMainLeft"
        app:layout_constraintTop_toBottomOf="@+id/mgvMain"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ietMainDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_light"
            android:hint="@string/valDni" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMainPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight"
        app:layout_constraintStart_toStartOf="@+id/gdlMainLeft"
        app:layout_constraintTop_toBottomOf="@+id/tilMainDni"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ietMainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_light"
            android:hint="@string/valPassword"
            android:password="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbxMainRememberUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/valRememberUser"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight"
        app:layout_constraintStart_toStartOf="@+id/gdlMainLeft"
        app:layout_constraintTop_toBottomOf="@+id/tilMainPassword" />

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#E1BEE7"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/valLogin"
        app:icon="@drawable/baseline_login_24"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight"
        app:layout_constraintStart_toStartOf="@+id/gdlMainLeft"
        app:layout_constraintTop_toBottomOf="@+id/cbxMainRememberUser" />

    <Button
        android:id="@+id/btnMainRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#E1BEE7"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/valRegister"
        app:icon="@drawable/baseline_app_registration_24"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight"
        app:layout_constraintStart_toStartOf="@+id/gdlMainLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnMainLogin" />

    <Button
        android:id="@+id/btnMainHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#BB86FC"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/valHelp"
        app:icon="@drawable/baseline_help_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gdlMainRight" />
</androidx.constraintlayout.widget.ConstraintLayout>